--- a/style.css
+++ b/style.css
@@ -1,5 +1,146 @@
-body {
-  background: skyblue;
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
+html,
+body,
+p,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+blockquote,
+figure,
+fieldset,
+legend,
+textarea,
+pre,
+iframe,
+hr,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button,
+input,
+select {
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+img,
+video {
+  height: auto;
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+body {
+  min-width: 375px;
+  text-decoration: none;
+  list-style-type: none;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+
+/*header*/
+header {
+  width: 100%;
+  background-color: #fff;
+}
+
+.logo {
+  width: 150px;
+  padding: 15px 0;
+}
+
+/*localisation-Titre*/
+.presentation {
+  display: flex;
+  flex-direction: column;
+  background-color: #faf8f8;
+}
+.presentation .presentation__localisation {
+  display: flex;
+  justify-content: center;
+  background-color: #eeecec;
+  padding: 10px 0;
+  border-top: 3px solid #d6d4d4;
+}
+.presentation .presentation__localisation .icon {
+  margin-right: 15px;
+}
+.presentation .presentation__site {
+  margin: 20px 45px;
+}
+.presentation .presentation__site h1 {
+  font-weight: 500;
+  font-size: 20px;
+  padding: 10px;
+}
+.presentation .presentation__site p {
+  font-weight: 100;
+}
+
+.btn__action {
+  padding: 10px;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  color: #fff;
+  border-radius: 25px;
+  border-style: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  box-shadow: 0px 7px 10px -6px #b9b8b8;
+}
+.btn__action:hover {
+  cursor: pointer;
+  opacity: 0.6;
+  box-shadow: 6px 6px 5px 2px grey;
+}
+
+/*Fonctionnement*/
+/*Resataurant*/
+/*footer*/
 
 /*# sourceMappingURL=style.css.map */
