--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 @import "base/reset.scss";
 @import "base/fonts.scss";
 @import "utils/mixins.scss";
+@import "utils/variables.scss";
 body {
     min-width: 375px;
     text-decoration: none;
@@ -63,8 +64,66 @@ header {
 
 /*Fonctionnement*/
 
+.fonctionnement {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0;
+    .fonctionnement__titre {
+        margin: 10px 0;
+        font-weight: 500;
+        font-size: 20px;
+        text-align: left;
+        padding-left: 15px;
+    }
+    .fonctionnement__explication {
+        display: flex;
+        flex-direction: column;
+        padding: 0 20px 0 30px;
+    }
+    .fonctionnement__liste {
+        display: flex;
+        align-items: center;
+        padding: 20px 0;
+        margin: 10px 0;
+        border-radius: 20px;
+        border: 1px solid #f2f2f2;
+        box-shadow: 0px 7px 10px -6px #b9b8b8;
+        position: relative;
+        background-color: #ececec;
+        i {
+            padding: 0 20px 0 50px;
+            color: #a5a5a5;
+            ;
+        }
+        .fonctionnement__chiffre {
+            display: flex;
+            border-radius: 100%;
+            height: 1.5em;
+            width: 1.5em;
+            border: 1px solid #f2f2f2;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            background-color: $primary-color;
+            position: absolute;
+            left: -15px;
+        }
+    }
+}
+
+.fonctionnement__liste:hover {
+    background-color: #f5eeee;
+    i {
+        color: $primary-color;
+    }
+}
+
 
 /*Resataurant*/
+
+.restaurants {
+    background-color: #dfdddd;
+}
 
 
 /*footer*/
