--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,15 @@ body {
     text-decoration: none;
 }
 
+.wrapper {
+    min-width: 375px;
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
+
+/*PAGE D'ACCUEIL*/
+
 
 /*header*/
 
@@ -20,7 +29,7 @@ header {
 
 .logo {
     width: 150px;
-    padding: 15px 0;
+    padding: 20px 0 15px 0;
 }
 
 
@@ -74,11 +83,18 @@ header {
         font-size: 20px;
         text-align: left;
         padding-left: 15px;
+        @include titre;
     }
     .fonctionnement__explication {
         display: flex;
         flex-direction: column;
         padding: 0 20px 0 30px;
+        @media only screen and (min-width: 1000px) {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            justify-content: space-evenly;
+        }
     }
     .fonctionnement__liste {
         display: flex;
@@ -90,10 +106,20 @@ header {
         box-shadow: 0px 7px 10px -6px #b9b8b8;
         position: relative;
         background-color: #ececec;
+        &:hover {
+            background-color: #f8eef8;
+            cursor: pointer;
+            i {
+                color: $primary-color;
+            }
+        }
+        @media only screen and (min-width: 1000px) {
+            margin: 10px;
+            padding-right: 35px;
+        }
         i {
             padding: 0 20px 0 50px;
             color: #a5a5a5;
-            ;
         }
         .fonctionnement__chiffre {
             display: flex;
@@ -111,60 +137,60 @@ header {
     }
 }
 
-.fonctionnement__liste:hover {
-    background-color: #f8eef8;
-    i {
-        color: $primary-color;
-    }
-}
-
 
 /*Resataurant*/
 
 .restaurants {
-    background-color: #f3f0f0;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    @media only screen and (min-width: 815px) {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .restaurants__titre {
         font-weight: 500;
         font-size: 20px;
         text-align: left;
         padding: 30px 0 30px 15px;
+        @include titre;
     }
-    .restaurants__cartes {
-        @include restocarte;
-        margin: 20px 15px;
-        text-decoration: none;
-        color: rgb(29, 165, 81);
-        position: relative;
-        img {
-            width: 100%;
-            height: 70%;
-            border-radius: 20px 20px 0 0;
-            object-fit: cover;
+    .restaurants__bloc {
+        background-color: #f3f0f0;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        @media only screen and (min-width: 634px) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
         }
-        .restaurants__cartes__texte {
-            display: flex;
-            justify-content: space-between;
-            color: #000;
-            padding: 15px 20px 0 10px;
-            text-align: left;
-        }
-        .restaurants__nouveau {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            @include nouveau;
-        }
-        i {
-            font-size: 25px;
-        }
-        i:hover {
-            @include coeur;
+        .restaurants__cartes {
+            @include restocarte;
+            margin: 20px 15px;
+            text-decoration: none;
+            color: rgb(29, 165, 81);
+            position: relative;
+            max-width: 600px;
+            img {
+                width: 100%;
+                height: 70%;
+                border-radius: 20px 20px 0 0;
+                object-fit: cover;
+            }
+            .restaurants__cartes__texte {
+                display: flex;
+                justify-content: space-between;
+                color: #000;
+                padding: 15px 20px 0 10px;
+                text-align: left;
+            }
+            .restaurants__nouveau {
+                position: absolute;
+                top: 15px;
+                right: 15px;
+                @include nouveau;
+            }
+            i {
+                font-size: 25px;
+                &:hover {
+                    @include coeur;
+                }
+            }
         }
     }
 }
@@ -192,5 +218,50 @@ header {
             padding-right: 25px;
             width: 5px;
         }
+    }
+}
+
+
+/*PAGE MENUS*/
+
+
+/*header*/
+
+.header__pages {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    i {
+        font-size: 20px;
+        margin-left: 10px;
+        color: #000;
+        margin-right: 25px;
+    }
+    .logo {
+        text-align: center;
+    }
+}
+
+.background {
+    background-image: url(../Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+    @include background;
+}
+
+.menu {
+    display: grid;
+    grid-template-columns: repeat(1.1fr);
+    .menu__name {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        font-family: $fonts2;
+        font-size: 25px;
+        margin: 20px 0;
+        border-top-left-radius: 40px;
+        border-top-right-radius: 40px;
+        margin-top: -20px;
+    }
+    i {
+        font-size: 20px;
     }
 }
