--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -52,3 +52,20 @@
     background-size: cover;
     height: 20em;
 }
+
+@mixin btn__menu {
+    display: flex;
+    border: 1px solid #f2f2f2;
+    border-radius: 20px;
+    background-color: #fff;
+    box-shadow: 0px 7px 10px -6px #b9b8b8;
+    padding: 15px;
+    margin: 10px;
+}
+
+@mixin menu-titre {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-left: 10px;
+}
