--- a/sass/style.scss
+++ b/sass/style.scss
@@ -178,8 +178,19 @@ header {
                 display: flex;
                 justify-content: space-between;
                 color: #000;
-                padding: 15px 20px 0 10px;
+                padding: 15px 15px 0 10px;
                 text-align: left;
+                svg {
+                    width: 30px;
+                    height: 30px;
+                    stroke: black;
+                    stroke-width: 15px;
+                    fill: rgb(245, 245, 245);
+                    &:hover {
+                        fill: $secondary-color;
+                        stroke: $primary-color;
+                    }
+                }
             }
             .restaurants__nouveau {
                 position: absolute;
@@ -305,11 +316,16 @@ header {
             @include btn-menu;
             align-items: center;
             position: relative;
+            overflow: hidden;
             p {
                 text-align: left;
             }
             &:hover {
                 cursor: pointer;
+            }
+            .menu__titre {
+                width: 100%;
+                transition: width .300s ease-in-out;
             }
             .menu__prix {
                 display: flex;
@@ -326,10 +342,29 @@ header {
                 }
             }
             .menu__check {
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 @include btn-check;
+                transform: translateX(100%);
+                transition: transform .3s ease-in-out;
                 i {
                     color: #fff;
                     align-items: center;
+                }
+            }
+            &:hover {
+                .menu__check {
+                    align-items: center;
+                    justify-content: center;
+                    transform: translateX(0);
+                    i {
+                        transform: rotate(360deg);
+                        transition: transform 0.5s ease-in-out;
+                    }
+                }
+                .menu__titre {
+                    width: 80%;
                 }
             }
         }
