--- a/style.css
+++ b/style.css
@@ -272,8 +272,19 @@ header {
   display: flex;
   justify-content: space-between;
   color: #000;
-  padding: 15px 20px 0 10px;
+  padding: 15px 15px 0 10px;
   text-align: left;
+}
+.restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte svg {
+  width: 30px;
+  height: 30px;
+  stroke: black;
+  stroke-width: 15px;
+  fill: whitesmoke;
+}
+.restaurants .restaurants__bloc .restaurants__cartes .restaurants__cartes__texte svg:hover {
+  fill: #FF79DA;
+  stroke: #9356DC;
 }
 .restaurants .restaurants__bloc .restaurants__cartes .restaurants__nouveau {
   position: absolute;
@@ -415,12 +426,17 @@ header {
   margin: 10px;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 .menu__bloc .menu__choix .btn__menu p {
   text-align: left;
 }
 .menu__bloc .menu__choix .btn__menu:hover {
   cursor: pointer;
+}
+.menu__bloc .menu__choix .btn__menu .menu__titre {
+  width: 100%;
+  transition: width 0.3s ease-in-out;
 }
 .menu__bloc .menu__choix .btn__menu .menu__prix {
   display: flex;
@@ -439,16 +455,33 @@ header {
   margin-left: auto;
 }
 .menu__bloc .menu__choix .btn__menu .menu__check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: #99E2D0;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0 20px 20px 0;
   height: 100%;
   position: absolute;
   right: 0;
   width: 15%;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
 }
 .menu__bloc .menu__choix .btn__menu .menu__check i {
   color: #fff;
   align-items: center;
+}
+.menu__bloc .menu__choix .btn__menu:hover .menu__check {
+  align-items: center;
+  justify-content: center;
+  transform: translateX(0);
+}
+.menu__bloc .menu__choix .btn__menu:hover .menu__check i {
+  transform: rotate(360deg);
+  transition: transform 0.5s ease-in-out;
+}
+.menu__bloc .menu__choix .btn__menu:hover .menu__titre {
+  width: 80%;
 }
 
 .commander {
