--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 @import "base/fonts.scss";
 @import "utils/mixins.scss";
 @import "utils/variables.scss";
+@import "utils/animations";
 body {
     min-width: 375px;
     list-style-type: none;
@@ -14,6 +15,46 @@ body {
     min-width: 375px;
     max-width: 1500px;
     margin: 0 auto;
+}
+
+.loader {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    .chargement {
+        position: absolute;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        visibility: hidden;
+        width: 100%;
+        height: 100%;
+        &__lettre {
+            color: $primary-color;
+            font-size: 80px;
+            letter-spacing: 15px;
+            animation: lumineux 1.5s infinite linear;
+        }
+    }
+}
+
+.chargement__lettre:nth-child(1) {
+    animation-delay: 0.1s;
+}
+
+.chargement__lettre:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.chargement__lettre:nth-child(3) {
+    animation-delay: 0.3s;
+}
+
+.chargement__lettre:nth-child(4) {
+    animation-delay: 0.4s;
 }
 
 
@@ -187,8 +228,7 @@ header {
                     stroke-width: 15px;
                     fill: rgb(245, 245, 245);
                     &:hover {
-                        fill: $secondary-color;
-                        stroke: $primary-color;
+                        stroke: url(gradientTransform.svg#degrade);
                     }
                 }
             }
@@ -206,6 +246,14 @@ header {
             }
         }
     }
+}
+
+#stop1 {
+    stop-color: $primary-color;
+}
+
+#stop2 {
+    stop-color: $secondary-color;
 }
 
 
