--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,27 +17,26 @@ body {
     margin: 0 auto;
 }
 
-.loader {
+
+/*loader*/
+
+.chargement {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    .chargement {
-        position: absolute;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        visibility: hidden;
-        width: 100%;
-        height: 100%;
-        &__lettre {
-            color: $primary-color;
-            font-size: 80px;
-            letter-spacing: 15px;
-            animation: lumineux 1.5s infinite linear;
-        }
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: lumineux 2s linear;
+    visibility: hidden;
+    z-index: 10;
+    &__lettre {
+        color: $primary-color;
+        font-size: 80px;
+        letter-spacing: 15px;
+        margin-bottom: 150px;
+        animation: lumineux 1.2s 3 linear;
     }
 }
 
@@ -221,16 +220,6 @@ header {
                 color: #000;
                 padding: 15px 15px 0 10px;
                 text-align: left;
-                svg {
-                    width: 30px;
-                    height: 30px;
-                    stroke: black;
-                    stroke-width: 15px;
-                    fill: rgb(245, 245, 245);
-                    &:hover {
-                        stroke: url(gradientTransform.svg#degrade);
-                    }
-                }
             }
             .restaurants__nouveau {
                 position: absolute;
@@ -323,6 +312,10 @@ header {
     @include background;
 }
 
+svg {
+    @include svg;
+}
+
 .menu {
     background-color: rgb(245, 245, 245);
     display: grid;
@@ -359,6 +352,18 @@ header {
         hr {
             @include hr;
         }
+        p:nth-child(1) {
+            animation: apmenu 0.4s ease;
+        }
+        p:nth-child(2) {
+            animation: apmenu 0.5s ease;
+        }
+        p:nth-child(3) {
+            animation: apmenu 0.6s ease;
+        }
+        p:nth-child(4) {
+            animation: apmenu 0.7s ease;
+        }
         .btn__menu {
             display: flex;
             @include btn-menu;
@@ -373,7 +378,7 @@ header {
             }
             .menu__titre {
                 width: 100%;
-                transition: width .300s ease-in-out;
+                transition: width .300s ease;
             }
             .menu__prix {
                 display: flex;
@@ -395,7 +400,7 @@ header {
                 justify-content: center;
                 @include btn-check;
                 transform: translateX(100%);
-                transition: transform .3s ease-in-out;
+                transition: transform .3s ease;
                 i {
                     color: #fff;
                     align-items: center;
@@ -408,7 +413,7 @@ header {
                     transform: translateX(0);
                     i {
                         transform: rotate(360deg);
-                        transition: transform 0.5s ease-in-out;
+                        transition: transform 0.5s ease;
                     }
                 }
                 .menu__titre {
