--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -7,14 +7,38 @@
         visibility: visible;
         opacity: 1;
     }
+    30% {
+        opacity: 0.9;
+    }
+    70% {
+        opacity: 0.7;
+    }
     90% {
         color: $secondary-color;
         text-shadow: none;
+        opacity: 0.5;
     }
     100% {
         color: $primary-color;
         text-shadow: 0 0 7px $primary-color;
         opacity: 0;
         visibility: hidden;
+    }
+}
+
+@keyframes apmenu {
+    0% {
+        opacity: 0;
+        transform: translateY(20rem);
+    }
+    40% {
+        opacity: 0.4;
+    }
+    70% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
