--- a/sass/style.scss
+++ b/sass/style.scss
@@ -229,9 +229,6 @@ header {
             }
             i {
                 font-size: 25px;
-                &:hover {
-                    @include coeur;
-                }
             }
         }
     }
@@ -343,6 +340,10 @@ svg {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media only screen and (min-width: 1109px) {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr)
+    }
     h2 {
         text-align: left;
         margin-left: 20px;
@@ -353,16 +354,16 @@ svg {
             @include hr;
         }
         p:nth-child(1) {
-            animation: apmenu 0.4s ease;
-        }
-        p:nth-child(2) {
             animation: apmenu 0.5s ease;
         }
+        p:nth-child(2) {
+            animation: apmenu 1s ease;
+        }
         p:nth-child(3) {
-            animation: apmenu 0.6s ease;
+            animation: apmenu 1.5s ease;
         }
         p:nth-child(4) {
-            animation: apmenu 0.7s ease;
+            animation: apmenu 2s ease;
         }
         .btn__menu {
             display: flex;
