--- a/style.css
+++ b/style.css
@@ -513,18 +513,6 @@ svg:hover {
   margin-left: 20px;
   border: 2px solid #99E2D0;
 }
-.menu__bloc .menu__choix:nth-child(1) {
-  animation: apmenu 0.5s ease;
-}
-.menu__bloc .menu__choix:nth-child(2) {
-  animation: apmenu 1s ease;
-}
-.menu__bloc .menu__choix:nth-child(3) {
-  animation: apmenu 1.5s ease;
-}
-.menu__bloc .menu__choix:nth-child(4) {
-  animation: apmenu 2s ease;
-}
 .menu__bloc .menu__choix .btn__menu {
   display: flex;
   border: 1px solid #f2f2f2;
@@ -536,6 +524,18 @@ svg:hover {
   align-items: center;
   position: relative;
   overflow: hidden;
+}
+.menu__bloc .menu__choix .btn__menu:nth-child(1) {
+  animation: apmenu 0.5s ease;
+}
+.menu__bloc .menu__choix .btn__menu:nth-child(2) {
+  animation: apmenu 1s ease;
+}
+.menu__bloc .menu__choix .btn__menu:nth-child(3) {
+  animation: apmenu 1.5s ease;
+}
+.menu__bloc .menu__choix .btn__menu:nth-child(4) {
+  animation: apmenu 2s ease;
 }
 .menu__bloc .menu__choix .btn__menu p {
   text-align: left;
