--- a/sass/style.scss
+++ b/sass/style.scss
@@ -369,7 +369,7 @@ svg {
             &:nth-of-type(2) {
                 animation: apmenu 1s ease;
             }
-            &:nth-of-typed(3) {
+            &:nth-of-type(3) {
                 animation: apmenu 1.5s ease;
             }
             &:nth-of-type(4) {
