--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,7 +28,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: lumineux 2s linear;
+    animation: lumineux 2.5s linear;
     visibility: hidden;
     z-index: 10;
     &__lettre {
@@ -36,7 +36,7 @@ body {
         font-size: 80px;
         letter-spacing: 15px;
         margin-bottom: 150px;
-        animation: lumineux 1.2s 3 linear;
+        animation: lumineux 0.7s 3 linear;
     }
 }
 
@@ -224,6 +224,24 @@ header {
                 color: #000;
                 padding: 15px 15px 0 10px;
                 text-align: left;
+                .favoris {
+                    svg {
+                        height: 1em;
+                        width: 1em;
+                        font-size: 30px;
+                    }
+                    .favoris__active {
+                        display: none;
+                    }
+                    &:hover {
+                        .favoris__active {
+                            display: block;
+                        }
+                        .favoris__inactive {
+                            display: none;
+                        }
+                    }
+                }
             }
             .restaurants__nouveau {
                 position: absolute;
@@ -236,14 +254,6 @@ header {
             }
         }
     }
-}
-
-#stop1 {
-    stop-color: $primary-color;
-}
-
-#stop2 {
-    stop-color: $secondary-color;
 }
 
 
@@ -311,10 +321,6 @@ header {
 .background4 {
     background-image: url(../Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
     @include background;
-}
-
-svg {
-    @include svg;
 }
 
 .menu {
