--- a/sass/style.scss
+++ b/sass/style.scss
@@ -224,24 +224,7 @@ header {
                 color: #000;
                 padding: 15px 15px 0 10px;
                 text-align: left;
-                .favoris {
-                    svg {
-                        height: 1em;
-                        width: 1em;
-                        font-size: 30px;
-                    }
-                    .favoris__active {
-                        display: none;
-                    }
-                    &:hover {
-                        .favoris__active {
-                            display: block;
-                        }
-                        .favoris__inactive {
-                            display: none;
-                        }
-                    }
-                }
+                @include coeur;
             }
             .restaurants__nouveau {
                 position: absolute;
@@ -337,6 +320,7 @@ header {
         border-radius: 40px 40px 0 0;
         margin-top: -30px;
         background-color: rgb(245, 245, 245);
+        @include coeur;
     }
     i {
         font-size: 20px;
